Fungerande animation, commit innan jag ändrar till att använda statiska matriser

--- a/ProjectDiary/2021-11-11.md
+++ b/ProjectDiary/2021-11-11.md
@@ -12,3 +12,9 @@ finsn det ben och så finns det Node i skelettet och dem är inte samma sak, men ä
 Den nuvarande planen är nog att flytta ut MeshIndexesen till modell klassen. Jag resonerar som så att det är enklare att flytta ut centraliserad funktionalitet till subklasser än det är att flytta in den
 funktionlitet till huvudklassen igen, dessutom föredrar jag att klasseran representerar sin egen funktionalitet i det fulla. En nod klass utan mesh indices skulle inte riktigt ha någon betydelse och förmedlar
 inte dens faktiska uppgift, medans det utan visar exakt vad som är tanken att den ska göra, och model klassen blir då den som definierar hur förhållandet av alla subkomponenter ser ut.
+
+På agendan är också huruvida MBMatrix4 borde skrivas om som en statiskt matris. Den urspunrli8ga matris klassen definierades med Vektorer, vilket absolut inte är några problem, men för en applikation
+som vet exakt vad den kommer använda för matriser är det extremt onödigt. Jag funderar på vad det optimala sättet att miminera kod duplikationen är givet att jag skriver om matrisklassen, och tanken
+jag har nu är att den statiska och dynamiska matris klassen helt enkelt delar grund funktioner som operar över antingen 1 kontinuerlig array eller 2 separata arrays. Fördelen med 1 array är att då blir 
+det trivialt att använda för båda, men problemet är att kopieringen av den dynamiska matrisen inte blir lika enkelt, medans 2 arrays inte nldvändgitvis fungerar lika enkelt för den statiska, men blir 
+enklare att kopier agrejer för den dynamiska.
